--- a/back-office/templates/tag/edit.html.twig
+++ b/back-office/templates/tag/edit.html.twig
@@ -3,11 +3,91 @@
 {% block title %}Edit Tag{% endblock %}
 
 {% block body %}
-    <h1>Edit Tag</h1>
-
-    {{ include('tag/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('tag_index') }}">back to list</a>
-
-    {{ include('tag/_delete_form.html.twig') }}
+    <div class="row">
+        <h1 class="h2">{{ context == 'show' ? 'Tag' : 'Modifier un tag' }}</h1>
+        <hr>
+    </div>
+    <div class="row mb-3">
+        <div class="col-6">
+            <label for="tag-id" class="form-label lead">Uuid</label>
+            <input type="text" id="tag-id" class="form-control" disabled value="{{ tag.getId() }}"/>
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="col-3">
+            <label for="tag-created-at" class="form-label lead">Crée le</label>
+            <input type="text"
+                   id="tag-created-at"
+                   class="form-control"
+                   disabled
+                   value="{{ tag.getCreatedAt()|date('d-m-Y H:i:s', 'Europe/Paris') }}"
+            />
+        </div>
+        <div class="col-3">
+            <label for="tag-updated-at" class="form-label lead">Mis à jour le</label>
+            <input type="text"
+                   id="tag-updated-at"
+                   class="form-control"
+                   disabled
+                   value="{{ tag.getUpdatedAt()|date('d-m-Y H:i:s', 'Europe/Paris') }}"
+            />
+        </div>
+    </div>
+    {{ form_start(form) }}
+    <div class="row mb-3">
+        <div class="col-3">
+            <label for="tag-name" class="form-label lead">Nom</label>
+            {{ form_errors(form.name) }}
+            {{ form_widget(form.name,
+                {'attr':
+                    {
+                        'placeholder': 'Nom',
+                        'class': 'form-control',
+                        'id': 'tag-name',
+                        'disabled': context == 'show' ? true : false
+                    }
+                }
+            )}}
+        </div>
+        <div class="col-3">
+            <label for="tag-label" class="form-label lead">Label</label>
+            {{ form_errors(form.label) }}
+            {{ form_widget(form.label,
+                {'attr':
+                    {
+                        'placeholder': 'Label',
+                        'class': 'form-control',
+                        'id': 'tag-label',
+                        'disabled': context == 'show' ? true : false
+                    }
+                }
+            )}}
+        </div>
+    </div>
+    <div class="d-flex mt-4">
+        {{ form_widget(form.submit,
+            {'attr':
+                {
+                    'class': context == 'edit' ? 'btn btn-primary me-2' : 'd-none',
+                },
+                'label': 'Modifier'
+            }
+        ) }}
+        {% if context == 'show' %}
+            <a href="{{ path('tag_edit', {'id': tag.getId()}) }}"
+               class="btn btn-primary me-2"
+            >
+                Modifier
+            </a>
+        {% endif %}
+        <a href="{{ path('tag_index') }}" class="btn btn-secondary me-2">Retour</a>
+        <button class="btn btn-danger"
+                data-uuid="{{ tag.getId() }}"
+                data-controller="tag"
+                data-action="tag#deleteTag"
+        >
+            Supprimer
+        </button>
+    </div>
+    {{ form_end(form) }}
 {% endblock %}
