--- a/back-office/templates/tag/new.html.twig
+++ b/back-office/templates/tag/new.html.twig
@@ -3,9 +3,50 @@
 {% block title %}New Tag{% endblock %}
 
 {% block body %}
-    <h1>Create new Tag</h1>
+    <div class="row">
+        <h1 class="h2">Ajouter un tag</h1>
+        <hr>
+    </div>
 
-    {{ include('tag/_form.html.twig') }}
-
-    <a href="{{ path('tag_index') }}">back to list</a>
+    {{ form_start(form) }}
+    <div class="row mb-3">
+        <div class="col-3">
+            <label for="tag-name" class="form-label lead">Nom</label>
+            {{ form_errors(form.name) }}
+            {{ form_widget(form.name,
+                {'attr':
+                    {
+                        'placeholder': 'Nom',
+                        'class': 'form-control',
+                        'id': 'tag-name',
+                    }
+                }
+            )}}
+        </div>
+        <div class="col-3">
+            <label for="tag-label" class="form-label lead">Label</label>
+            {{ form_errors(form.label) }}
+            {{ form_widget(form.label,
+                {'attr':
+                    {
+                        'placeholder': 'Label',
+                        'class': 'form-control',
+                        'id': 'tag-label',
+                    }
+                }
+            )}}
+        </div>
+    </div>
+    <div class="d-flex mt-4">
+        {{ form_widget(form.submit,
+            {'attr':
+                {
+                    'class':'btn btn-primary me-2',
+                },
+                'label': 'Ajouter'
+            }
+        ) }}
+        <a href="{{ path('tag_index') }}" class="btn btn-secondary">Retour</a>
+    </div>
+    {{ form_end(form) }}
 {% endblock %}
