--- a/frontend/src/css/pages/createGame.css
+++ b/frontend/src/css/pages/createGame.css
@@ -257,11 +257,8 @@
 
     overflow-y: scroll;
     overflow-x: hidden;
-}
 
-.category-list::after {
-    content: "";
-    flex: auto;
+    height: 250px;
 }
 
 .category {
