--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -14,6 +14,27 @@
     --button-pink-color: #DC71C7;
 }
 
+* {
+    scrollbar-color: #FCFCFC #16AFD9;
+}
+
+::-webkit-scrollbar {
+    background-color: #16AFD9;
+    width: 15px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #FCFCFC;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #e6f5fa;
+}
+
+::-webkit-scrollbar-thumb:active {
+    background-color: #d6f0f8;
+}
+
 @font-face {
     font-family: "Coolvetica Rg";
     src: url("/webfonts/Coolvetica-Regular.woff2") format("woff2");
