--- a/frontend/src/css/pages/createGame.css
+++ b/frontend/src/css/pages/createGame.css
@@ -258,7 +258,7 @@
     overflow-y: scroll;
     overflow-x: hidden;
 
-    height: 250px;
+    height: 350px;
 }
 
 .category {
@@ -285,6 +285,10 @@
 
 .category.selected {
     background-color: var(--button-pink-color);
+}
+
+.category-list-no-category-found {
+    margin: var(--category-button-vertical-margin) var(--category-button-horizontal-margin);
 }
 
 .pick-all-categories-button,
