--- a/back-office/templates/category/new.html.twig
+++ b/back-office/templates/category/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Category{% endblock %}
+{% block title %}Ajouter une catégorie{% endblock %}
 
 {% block body %}
     <div class="row">
