--- a/back-office/templates/question/new.html.twig
+++ b/back-office/templates/question/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Question{% endblock %}
+{% block title %}Ajouter une question{% endblock %}
 
 {% block body %}
     <div class="row">
