--- a/back-office/templates/question/index.html.twig
+++ b/back-office/templates/question/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Question index{% endblock %}
+{% block title %}Questions{% endblock %}
 
 {% block body %}
     <div class="row">
