--- a/back-office/templates/question/show.html.twig
+++ b/back-office/templates/question/show.html.twig
@@ -24,7 +24,7 @@
             />
         </div>
         <div class="col-3">
-            <label for="question-updated-at" class="form-label lead">Mis à jour le</label>
+            <label for="question-updated-at" class="form-label lead">Modifié le</label>
             <input type="text"
                    id="question-updated-at"
                    class="form-control"
