--- a/back-office/templates/question_type/index.html.twig
+++ b/back-office/templates/question_type/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}QuestionType index{% endblock %}
+{% block title %}Types de question{% endblock %}
 
 {% block body %}
     <div class="row">
