--- a/back-office/templates/question_type/new.html.twig
+++ b/back-office/templates/question_type/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New QuestionType{% endblock %}
+{% block title %}Ajouter un type de question{% endblock %}
 
 {% block body %}
     <div class="row">
