--- a/back-office/templates/refresh_token/index.html.twig
+++ b/back-office/templates/refresh_token/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}RefreshToken index{% endblock %}
+{% block title %}Refresh tokens{% endblock %}
 
 {% block body %}
     <div class="row">
