--- a/back-office/templates/tag/edit.html.twig
+++ b/back-office/templates/tag/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Tag{% endblock %}
+{% block title %}{{ context == 'show' ? 'Tag' : 'Modifier un tag' }}{% endblock %}
 
 {% block body %}
     <div class="row">
@@ -24,7 +24,7 @@
             />
         </div>
         <div class="col-3">
-            <label for="tag-updated-at" class="form-label lead">Mis à jour le</label>
+            <label for="tag-updated-at" class="form-label lead">Modifié le</label>
             <input type="text"
                    id="tag-updated-at"
                    class="form-control"
