--- a/back-office/templates/tag/new.html.twig
+++ b/back-office/templates/tag/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Tag{% endblock %}
+{% block title %}Ajouter un tag{% endblock %}
 
 {% block body %}
     <div class="row">
