--- a/frontend/src/css/util.css
+++ b/frontend/src/css/util.css
@@ -1,15 +1,3 @@
-.pull-right {
-    float: right;
-}
-
-.pull-left {
-    float: left;
-}
-
-.clearfix {
-    clear: both;
-}
-
 .text-left {
     text-align: left;
 }
@@ -124,71 +112,33 @@ h6.mb, .h6.mb {
     display: flex;
 }
 
-.flex-item-full-width {
+.flex-container-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-item-full-space {
     flex: 1;
-}
-
-.red-pink-bg {
-    background-color: #DE4567;
-}
-
-.brown-bg {
-    background-color: #91442D;
-}
-
-.curious-blue-bg {
-    background-color: #1888C6;
-}
-
-.deep-blue-bg {
-    background-color: #217D9E;
-}
-
-.malibu-blue-bg {
-    background-color: #2EC6EF;
-}
-
-.outrageous-orange-bg {
-    background-color: #FF693B;
-}
-.yellow-bg {
-    background-color: #EAB01F;
-}
-
-.green-bg {
-    background-color: #1E9B48;
-}
-
-.purple-heart-bg {
-    background-color: #5B1EBC;
 }
 
 .text-white {
     color: white;
 }
 
-.text-green {
-    color: #1E9B48;
-}
-
-.text-red {
-   color: #de2d48;
-}
-
 .float-right {
     float: right;
 }
 
+.clearfix {
+    clear: both;
+}
+
 .visible {
-    display: inline-block;
+    display: initial;
 }
 
 .hidden {
     display: none;
-}
-
-.centered-item {
-    margin: auto;
 }
 
 @media screen and (max-width: 992px) {
