--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -219,18 +219,13 @@ a:hover {
     width: 100%;
     height: 60px;
 
-    display: table;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .app.no-footer > footer {
     display: none;
-}
-
-.app > footer .footer-text {
-    display: table-cell;
-    vertical-align: middle;
-
-    text-align: center;
 }
 
 .app > footer .footer-text-item {
