--- a/frontend/src/css/pages/createGame.css
+++ b/frontend/src/css/pages/createGame.css
@@ -340,6 +340,10 @@
 
 .selected-categories-list {
     border: 3px solid chartreuse;
+
+    max-height: 150px;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .create-game-footer {
@@ -402,11 +406,7 @@
     }
 }
 
-@media screen and (max-height: 768px) {
-    .create-game-header {
-        margin-bottom: 20px;
-    }
-    
+@media screen and (max-height: 840px) {
     .create-game-footer {
         justify-content: flex-end;
     }
@@ -414,5 +414,11 @@
     .create-game-footer-counterbalance,
     .selected-categories-container {
         display: none;
+    }
+}
+
+@media screen and (max-height: 768px) {
+    .create-game-header {
+        margin-bottom: 20px;
     }
 }
